--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,7 +16,7 @@ pipeline {
         }
         stage('deploying the code') {
             steps {
-                deploy adapters: [tomcat8(credentialsId: 'tomcat-cred', path: '', url: 'http://172.31.47.228:8080')], contextPath: 'login', onFailure: false, war: '**/*.war'
+                deploy adapters: [tomcat8(credentialsId: 'tomcat-cred', path: '', url: 'http://172.31.47.228:8080')], contextPath: 'welcome', onFailure: false, war: '**/*.war'
             }
         }
     }
