--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -83,6 +83,7 @@
 
     - name: "Build an image and push it to a private repo"
       community.docker.docker_image:
+        source: build
         build:
           path: /tmp/{{ JOB_NAME }}
         name: 127.0.0.1:5000/lwplabslogin
