--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -89,7 +89,7 @@
         name: 127.0.0.1:5000/lwplabslogin
         tag: "latest"
         push: yes
-        build.nocache: yes
+        #build.nocache: yes
         force_source: yes
       register: out5
       tags: docker-image-build
